# rsqr

./: Cargo.toml  Makefile  README.md  build.rs  qa.sh
completions/: _rsqr  rsqr.bash  rsqr.fish
src/: charset.rs  cli.rs  main.rs  qr.rs  render.rs
tests/: integration.rs
